# postchain-client-rust

./: Cargo.toml  README.md
.github/workflows/: main.yml
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: derive.rs
examples/book-review/client/: Cargo.toml
examples/book-review/client/src/: main.rs
examples/book-review/rell-dapp/: chromia.yml  docker-compose.yml
examples/book-review/rell-dapp/src/main/: entities.rell  operations.rell  queries.rell
examples/book-review/rell-dapp/src/tests/: book_review_test.rell
examples/for-docs/: Cargo.toml
examples/for-docs/src/: main.rs
src/: lib.rs
src/encoding/: gtv.rs  mod.rs
src/transport/: client.rs  rest_client.rs
src/utils/: hasher.rs  keypair.rs  mod.rs  operation.rs  params.rs  signature.rs  transaction.rs  types.rs
tests/: integration_tests.rs
tests/blockchain/: postchain-single-node.yml  start-postchain.bash  stop-postchain.bash
tests/blockchain/testDapp/: chromia.yml
tests/blockchain/testDapp/src/: main.rell
