[package]
name = "postchain-client"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Just another Chromia Postchain client implemented in Rust."
readme = "README.md"
repository = "https://github.com/cuonglb/postchain-client-rust/"
exclude = [
    "examples/*",
]

[dependencies]
postchain-client-derive = { path = "derive", version = "0.0.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
reqwest = { version = "0.12.12", features = ["json"] } 
url = "2.5.4"
tokio = { version = "1.43.0", features = ["full"] }
asn1 = {version = "0.20.0", features = ["std"] }
secp256k1 = { version = "0.30.0", features = ["rand", "serde"] }
hex = "0.4.3"
num-bigint = "0.4.6"
sha2 = "0.10.8"
tracing = "0.1.41"
base64 = "0.22"
bigdecimal = { version = "0.4.7", features = [ "serde-json" ] }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3.19"
ctor = "0.2.9"