[package]
name = "postchain-client-derive"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Chromia Postchain client derive."
repository = "https://github.com/cuonglb/postchain-client-rust/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
num-bigint = "0.4.6"
bigdecimal = "0.4.7"